--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -86,8 +86,10 @@ main>section {
   margin: 5% auto; 
   
 }
+
 main>section>h1 {
   grid-column: 1/-1;
+  
 }
 
 img {
@@ -103,7 +105,8 @@ img {
 h1{
   text-align: center;
   text-transform: uppercase;
-    margin: 10% 35% 0 35%;  
+  font-size: 2rem;
+    margin: 10% 35% 0 35%; 
     border-bottom: 1px solid white; 
 }
 
