--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -62,7 +62,7 @@ body {
   text-transform: uppercase;
   margin-left: 10px;
   margin-top: 20px;
- 
+  color: rgb(209, 197, 130);
 }
 
 
@@ -74,6 +74,7 @@ body {
   right: 5%;
   top: 2.5%;
   font-size: 2rem;
+  color: rgb(209, 197, 130);
  }
 
 
@@ -82,7 +83,7 @@ main>section {
   display: grid;
   max-width: 90%;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-  grid-gap: 100px;  
+  grid-gap: 80px;  
   margin: 5% auto; 
   
 }
@@ -117,27 +118,35 @@ h3 {
 
 } 
 
+.about {
+  text-align: center;
+}
+
+.soldout  {
+  font-size: 2.2rem;
+  color: rgb(209, 197, 130);
+  margin-left: 8%;
+}
 li {
   list-style-type: none;
-  display: inline;
-  padding: 5px;
+
 }
 
 #icons{
   display: flex;
+  /* align-items: flex-start; */
   justify-content: space-around;
 
 }
 
 
-i {
-  margin-left: 5%;
- 
-}
+
 
 #allergen, #vegetarian, #alcohol {
-  font-size: 1.8rem;
+  font-size: 1.1rem;
+  visibility: hidden;
 }
+
 #allergen, .a {
   color: red;
 
@@ -147,18 +156,28 @@ i {
 }
 
 #alcohol, .fa-glass {
-   color: purple;
+   color: rgb(165, 6, 165);
 }
+
+i {
+   
+  padding: 5px;
+ 
+} 
 
 button {
   
+  background-color: rgb(202, 202, 202);
   border: none;
+  border-radius: 2.5%;
+  width: 100%;
+  margin-top: 5%;
  
 }
 
 .expand{
   font-size: 1.2rem;
-  margin-left: 20%;
+  
 }
 
 
