--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -25,44 +25,46 @@ body {
 /**NAVIGATION FLEX-BOX**/
 
 #nav {
- 
    display: flex;
-   flex-direction: column;
-   justify-content: space-around;
    margin: 0;
    padding: 10%;
-   background:#222222; 
+   background: rgb(36, 35, 35);
    position: absolute;
    right: 0%;
    display: none;
-   top: 0rem;
-   width: 50%;
+   top: 0;
+   width: 100%;
    height: 100%;
   
 }
 
-#nav  li a {
+  #nav  a {
+    display: flex;
+   flex-direction: column;
+   justify-content: space-around;
   list-style: none;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   color: rgb(250, 235, 235);
-  margin: 20%;
+  margin: 15px;
+  
+  
 }
 
 
 
-.navlink a:visited {
+#nav a:visited {
   color: rgb(250, 235, 235); 
-}
+} 
 
 #logo{
   font-size: 2.4rem;
   text-transform: uppercase;
   margin-left: 10px;
   margin-top: 20px;
-  color: rgb(209, 197, 130);
+  color: #ffffff;
 }
 
 
@@ -72,9 +74,9 @@ body {
   position: fixed;
   z-index: 2;
   right: 5%;
-  top: 2.5%;
+  top: 50px;
   font-size: 2rem;
-  color: rgb(209, 197, 130);
+  color: #ffffff;
  }
 
 
@@ -124,7 +126,8 @@ h3 {
 
 .soldout  {
   font-size: 2.2rem;
-  color: rgb(209, 197, 130);
+  font-style: bolder;
+  color: rgb(202, 182, 68);
   margin-left: 8%;
 }
 li {
@@ -165,8 +168,8 @@ i {
  
 } 
 
-button {
-  
+ .expand {
+  font-size: 1.2rem;
   background-color: rgb(202, 202, 202);
   border: none;
   border-radius: 2.5%;
@@ -175,10 +178,7 @@ button {
  
 }
 
-.expand{
-  font-size: 1.2rem;
-  
-}
+
 
 
 /**HIDE**/
