--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -105,6 +105,14 @@ img {
 
 /**STYLE**/
 
+summary {
+  position: absolute;
+  z-index: 5;
+  margin-left: 82.5%;
+  top: 15%;
+  font-size: .8rem;;
+}
+
 h1{
   text-align: center;
   text-transform: uppercase;
@@ -126,7 +134,6 @@ h3 {
 
 .soldout  {
   font-size: 2.2rem;
-  font-style: bolder;
   color: rgb(202, 182, 68);
   margin-left: 8%;
 }
