--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -105,11 +105,17 @@ img {
 
 /**STYLE**/
 
-summary {
-  position: absolute;
-  z-index: 5;
-  margin-left: 82.5%;
-  top: 15%;
+summary, #veg-filter {
+  position: fixed;
+  margin-left: 88%;
+  top: 100px;
+  font-size: .8rem;;
+}
+
+ #veg-filter {
+  position: fixed;
+  margin-left: 88%;
+  top: 130px;
   font-size: .8rem;;
 }
 
