--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-*{
+* {
   box-sizing: border-box;
 }
 
 #my-box {
   width: 80%;
   padding: 30px;
- 
+
 }
 
 
@@ -17,31 +17,31 @@ body {
   padding: 30px;
   background-color: rgb(36, 35, 35);
   font-family: 'Montserrat', sans-serif;
-  color: rgb(250, 235, 235); 
-    
- 
+  color: rgb(250, 235, 235);
+
+
 }
 
 /**NAVIGATION FLEX-BOX**/
 
 #nav {
-   display: flex;
-   margin: 0;
-   padding: 10%;
-   background: rgb(36, 35, 35);
-   position: absolute;
-   right: 0%;
-   display: none;
-   top: 0;
-   width: 100%;
-   height: 100%;
-  
+  display: flex;
+  margin: 0;
+  padding: 10%;
+  background: rgb(36, 35, 35);
+  position: absolute;
+  right: 0%;
+  display: none;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
 }
 
-  #nav  a {
-    display: flex;
-   flex-direction: column;
-   justify-content: space-around;
+#nav a {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   list-style: none;
   text-align: center;
   text-decoration: none;
@@ -49,17 +49,18 @@ body {
   font-size: 2.2rem;
   color: rgb(250, 235, 235);
   margin: 15px;
-  
-  
+
+
 }
 
 
 
 #nav a:visited {
-  color: rgb(250, 235, 235); 
-} 
+  color: rgb(250, 235, 235);
+}
 
-#logo{
+
+#logo {
   font-size: 2.4rem;
   text-transform: uppercase;
   margin-left: 10px;
@@ -68,141 +69,174 @@ body {
 }
 
 
-
-
 #burger {
   position: fixed;
   z-index: 2;
-  right: 5%;
+  right: 3%;
   top: 50px;
   font-size: 2rem;
   color: #ffffff;
- }
+}
 
 
+/**RESPONSIVE LAYOUT**/
 
 main>section {
   display: grid;
   max-width: 90%;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-  grid-gap: 80px;  
-  margin: 5% auto; 
-  
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 80px;
+  margin: 5% auto;
+
 }
 
 main>section>h1 {
   grid-column: 1/-1;
-  
+
+}
+
+
+article {
+  display:flex;
+  flex-direction: column;
+  border: .5px solid whitesmoke;
 }
 
 img {
-  
   max-width: 100%;
-  height: auto;
-  
-}
+  margin-top: 3%;
 
+}
 
 /**STYLE**/
-
-summary, #veg-filter {
+summary, #veg-filter, #alcohol {
   position: fixed;
-  margin-left: 88%;
+  margin-left: 91%;
+  font-size: .8rem;
+  ;
+}
+
+summary {
   top: 100px;
-  font-size: .8rem;;
 }
-
- #veg-filter {
-  position: fixed;
-  margin-left: 88%;
+#veg-filter {
   top: 130px;
-  font-size: .8rem;;
+  
 }
 
-h1{
+#alcohol {
+  top: 148px;
+
+}
+
+
+h1 {
   text-align: center;
   text-transform: uppercase;
   font-size: 2rem;
-    margin: 10% 35% 0 35%; 
-    border-bottom: 1px solid white; 
+  margin: 10% 35% 0 35%;
+  border-bottom: 1px solid white;
 }
+
 
 h3 {
   text-align: center;
   text-transform: uppercase;
   margin-top: 5%;
+  max-height: 15px;
 
-} 
+}
 
 .about {
   text-align: center;
+  max-height: 20px;  
+
 }
 
-.soldout  {
-  font-size: 2.2rem;
-  color: rgb(202, 182, 68);
-  margin-left: 8%;
+
+
+ .soldout {
+  text-align: center;
+  font-size: 1.8rem;
+  background-color: rgb(202, 182, 68);
+  color: black;
+  margin-top:-2%;
+  margin-left: 20%;
+} 
+
+ul {
+  display: flex;
+  justify-items: start;
 }
+
 li {
   list-style-type: none;
+  top: 0;
+
 
 }
 
-#icons{
+#icons {
   display: flex;
-  /* align-items: flex-start; */
   justify-content: space-around;
-
+  visibility: hidden;
+   
 }
 
 
-
-
-#allergen, #vegetarian, #alcohol {
+.allergen,
+.fa-leaf,
+.alcohol {
   font-size: 1.1rem;
   visibility: hidden;
 }
 
-#allergen, .a {
+.allergen,
+.a {
   color: red;
-
-}
-#vegetarian, .fa-leaf {
-   color: green;
+  font-style: normal;
+  font-size: 1rem;
 }
 
-#alcohol, .fa-glass {
-   color: rgb(165, 6, 165);
+.fa-leaf {
+  color: green;
+}
+
+.fa-glass {
+  color: rgb(165, 6, 165);
 }
 
 i {
-   
-  padding: 5px;
- 
-} 
 
- .expand {
+  padding: 5px;
+
+}
+
+.expand {
   font-size: 1.2rem;
   background-color: rgb(202, 202, 202);
   border: none;
   border-radius: 2.5%;
   width: 100%;
+  top: auto;
+
+}
+
+.description {
+  display: none;
   margin-top: 5%;
- 
+
 }
 
 
+/**HIDE ELEMENTS**/
 
-
-/**HIDE**/
-
-.hide {
+.hide,
+.hide2 {
   display: none;
 }
 
-.description{
-   display: none; 
-  /* margin: 0 5%; */
- 
- 
+.active {
+  color: purple;
 }
+
