--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
-#my-box {
+/* #my-box {
   width: 80%;
   padding: 30px;
 
-}
+} */
 
 
 
@@ -27,7 +27,6 @@ body {
 #nav {
   display: flex;
   margin: 0;
-  padding: 10%;
   background: rgb(36, 35, 35);
   position: absolute;
   right: 0%;
@@ -41,14 +40,14 @@ body {
 #nav a {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   list-style: none;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 2.2rem;
   color: rgb(250, 235, 235);
-  margin: 15px;
+  margin: 55px;
 
 
 }
@@ -99,32 +98,43 @@ main>section>h1 {
 article {
   display:flex;
   flex-direction: column;
-  border: .5px solid whitesmoke;
+  /* border: .5px solid whitesmoke; */
 }
 
 img {
   max-width: 100%;
   margin-top: 3%;
+  max-height: 250px;
 
 }
 
 /**STYLE**/
-summary, #veg-filter, #alcohol {
+summary, #veg-filter, #alc-filter {
   position: fixed;
-  margin-left: 91%;
+  margin-left: 92%;
   font-size: .8rem;
-  ;
+  
 }
 
+/*mobile*/
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+  summary, #veg-filter, #alc-filter {
+    
+    margin-left: 80%;
+     
+  }
+
+}
 summary {
   top: 100px;
+
 }
 #veg-filter {
   top: 130px;
   
 }
 
-#alcohol {
+#alc-filter {
   top: 148px;
 
 }
@@ -142,8 +152,8 @@ h1 {
 h3 {
   text-align: center;
   text-transform: uppercase;
-  margin-top: 5%;
-  max-height: 15px;
+  margin-top: 25%;
+  max-height: 5px;
 
 }
 
@@ -157,17 +167,17 @@ h3 {
 
  .soldout {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
+  font-weight: bolder;
   background-color: rgb(202, 182, 68);
-  color: black;
-  margin-top:-2%;
-  margin-left: 20%;
+  color: rgb(26, 4, 4);
+   
 } 
 
-ul {
+ ul {
   display: flex;
   justify-items: start;
-}
+} 
 
 li {
   list-style-type: none;
@@ -218,16 +228,29 @@ i {
   border: none;
   border-radius: 2.5%;
   width: 100%;
+  max-height: 30px;
   top: auto;
 
 }
 
+.expand:hover {
+  background-color: rgb(136, 134, 134);
+}
+
+
 .description {
   display: none;
   margin-top: 5%;
-
 }
 
+footer{
+  font-size: .7em;
+  text-align: center;
+  margin-top: 10%;
+  bottom: 0;
+  width: 100%;
+  max-height: 50px;
+}
 
 /**HIDE ELEMENTS**/
 
@@ -237,6 +260,6 @@ i {
 }
 
 .active {
-  color: purple;
+  background-color: rgb(136, 134, 134);
 }
 
