--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -109,7 +109,7 @@ img {
 }
 
 /**STYLE**/
-summary, #veg-filter, #alc-filter {
+summary, #veg-filter, #non-alc-filter {
   position: fixed;
   margin-left: 92%;
   font-size: .8rem;
@@ -118,7 +118,7 @@ summary, #veg-filter, #alc-filter {
 
 /*mobile*/
 @media only screen and (min-width: 320px) and (max-width: 767px) {
-  summary, #veg-filter, #alc-filter {
+  summary, #veg-filter, #non-alc-filter {
     
     margin-left: 80%;
      
@@ -134,7 +134,7 @@ summary {
   
 }
 
-#alc-filter {
+#non-alc-filter {
   top: 148px;
 
 }
