--- a/restaurant-site-dynamic/style.css
+++ b/restaurant-site-dynamic/style.css
@@ -3,6 +3,7 @@
 :root {
   --font-body: 'Montserrat', sans-serif;
 }
+
 /* * {
   box-sizing: border-box;
 } */
@@ -91,7 +92,7 @@ main>section>h1 {
 
 
 article {
-  display:flex;
+  display: flex;
   flex-direction: column;
   /* border: .5px solid whitesmoke; */
 }
@@ -104,29 +105,36 @@ img {
 }
 
 /**STYLE**/
-summary, #veg-filter, #non-alc-filter {
+summary,
+#veg-filter,
+#non-alc-filter {
   position: fixed;
   margin-left: 92%;
   font-size: .8rem;
-  
+
 }
 
 /*mobile*/
 @media only screen and (min-width: 320px) and (max-width: 767px) {
-  summary, #veg-filter, #non-alc-filter {
-    
+
+  summary,
+  #veg-filter,
+  #non-alc-filter {
+
     margin-left: 80%;
-     
+
   }
 
 }
+
 summary {
   top: 100px;
 
 }
+
 #veg-filter {
   top: 130px;
-  
+
 }
 
 #non-alc-filter {
@@ -154,25 +162,25 @@ h3 {
 
 .about {
   text-align: center;
-  max-height: 20px;  
+  max-height: 20px;
 
 }
 
 
 
- .soldout {
+.soldout {
   text-align: center;
   font-size: 1.4rem;
   font-weight: bolder;
   background-color: rgb(202, 182, 68);
   color: rgb(26, 4, 4);
-   
-} 
+  margin: 1%;
+}
 
- ul {
+ul {
   display: flex;
   justify-items: start;
-} 
+}
 
 li {
   list-style-type: none;
@@ -184,8 +192,8 @@ li {
 #icons {
   display: flex;
   justify-content: space-around;
-  
-   
+
+
 }
 
 
@@ -221,7 +229,7 @@ i {
   font-size: 1.2rem;
   background-color: rgb(202, 202, 202);
   border: none;
-  border-radius: 2.5%;
+  border-radius: 5%;
   width: 100%;
   max-height: 30px;
   top: auto;
@@ -239,7 +247,7 @@ i {
   text-align: justify;
 }
 
-footer{
+footer {
   font-size: .7em;
   text-align: center;
   margin-top: 10%;
@@ -255,7 +263,7 @@ footer{
   display: none;
 }
 
+
 .active {
   background-color: rgb(136, 134, 134);
 }
-
