--- a/restaurant-petrograd/style.css
+++ b/restaurant-petrograd/style.css
@@ -4,9 +4,9 @@
   --font-body: 'Montserrat', sans-serif;
 }
 
-/* * {
+ * {
   box-sizing: border-box;
-} */
+} 
 
 
 body {
@@ -68,9 +68,9 @@ body {
 #burger {
   position: fixed;
   z-index: 2;
-  right: 3%;
+  right: 3.5%;
   top: 50px;
-  font-size: 2rem;
+  font-size: 2.5rem;
   color: #ffffff;
 }
 
@@ -95,7 +95,6 @@ main>section>h1 {
 article {
   display: flex;
   flex-direction: column;
-  /* border: .5px solid whitesmoke; */
 }
 
 img {
@@ -110,7 +109,7 @@ summary,
 #veg-filter,
 #non-alc-filter {
   position: fixed;
-  margin-left: 92%;
+  margin-left: 91%;
   font-size: .8rem;
 
 }
@@ -118,11 +117,20 @@ summary,
 /*mobile*/
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 
+  #burger {
+   
+    right: 3%;
+    font-size: 2.8rem;
+    
+  }
+
   summary,
   #veg-filter,
   #non-alc-filter {
 
-    margin-left: 80%;
+    margin-left: 78%;
+    font-size: 1rem;
+
 
   }
 
